--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.4"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.4",
     "react-router-dom": "^7.1.5"
   }
 }
